init of single node ec2 + ebs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# tfvars goes in tfvars.example
+terraform.tfvars
+
+# other
+.terraform.lock.hcl
+
 # Local .terraform directories
 **/.terraform/*
 
